# DNSTAP2

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  QUICKSTART.md  README.md  SNMP-Integration.md  config.example.toml  pyproject.toml
.claude/skills/deploy-verify-dnstap/: SKILL.md
diagnostics/: poc-vector-report.txt
docker/: Dockerfile.mac  Dockerfile.rhel7.9  QUICKSTART.md  README.md  install-redhat.md
docker/allinone/: Dockerfile  QUICKSTART.md  README.md  supervisord.conf
docker/allinone/config/dnscollector/: config.yml
docker/allinone/config/grafana/: custom.ini
docker/allinone/config/grafana/provisioning/dashboards/: dashboards.yaml
docker/allinone/config/grafana/provisioning/dashboards/json/: dnscollector-overview.json
docker/allinone/config/grafana/provisioning/datasources/: datasources.yaml
docker/allinone/config/loki/: loki-config.yml
docker/allinone/config/prometheus/: prometheus.yml
docker/stack/: .env.example  Dockerfile.dnscollector  README.md  docker-compose.yml
docker/stack/dnscollector/: config.yml
docker/stack/grafana/provisioning/dashboards/: dashboards.yaml
docker/stack/grafana/provisioning/datasources/: datasources.yaml
docker/stack/prometheus/: prometheus.yml
docker/stack/vector/: vector.toml
docs/: README.md  demo-a2z-animated.html  demo-presentation-with-voice.html  demo-presentation.html  design.md  dnstap-collector-sizing.md  dnstap-value-evidence.md  firewall-dnstap-verification-runbook.md  firewall-ports.md  infoblox-dataconnector-questions.md  infoblox-dnstap-extract.md  infoblox-ops-playbook.md  jira-stories.csv  jira-stories.md  lab-splunk-mi_dhcp-pipeline.md  meeting-dnstap-vs-dataconnector-hec.md  meeting-slide-outline.md  poc-business-case.html  poc-evaluation-plan.md  ports.csv  ports.md  splunk-index-transport-recommendation.md  testing-presentation-with-voice.html
docs/firewall/: Network-Architecture-Diagram.md  Network-Connectivity-Spreadsheet.csv
grafana/dashboards/: dnscollector-overview.json
scripts/: bootstrap.sh  check_infoblox.py  configure_infoblox_dnstap.py  configure_local_settings.py  diagnose_dnstap_prereqs.py  dnstap_synth.py  health-targets.example.csv  install_alertmanager.sh  install_dnscollector_receiver.sh  install_dnstap_receiver.sh  install_grafana.sh  install_health_snmp.sh  install_loki.sh  install_prometheus.py  install_prometheus.sh  install_splunk_uf.sh  install_stack.sh  install_vector.py  poc_common.sh  poc_enable_vector.sh  poc_health_snmp.py  poc_simulate_dnstap.sh  poc_splunk_bringup.sh  poc_stack.sh  render_prometheus_config.py  render_vector_config.py  run_demo.sh  setup.sh  test_dnstap_flow.py
scripts/lib/: __init__.py  config.py  infoblox.py  platform_info.py  render.py  sysuser.py
scripts/poc/: README.md  lib_poctest.sh  process_results.py  queryfile.example  run_poc_campaign.sh  run_test_dnstap.sh  run_test_querylog.sh
splunk/: README.md  dns_dnstap_ab_overview.xml  dns_dnstap_filterable.xml  dns_dnstap_overview.xml  infoblox_system_health.xml
src/dnstap2/: __init__.py  __main__.py  cli.py  collector.py  decoder.py  framestream.py
src/dnstap2/sinks/: __init__.py  base.py  jsonl.py  splunk_hec.py  stdout.py
templates/: prometheus.yml.tmpl  vector.toml.tmpl
tests/: test_config.py  test_configure_local_settings.py  test_framestream.py  test_health_snmp.py  test_infoblox.py  test_platform_info.py  test_render.py  test_splunk_dashboards.py
