[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnstap2"
version = "0.1.0"
description = "A small dnstap collector and parser — receives Frame Streams from a DNS server (InfoBlox NIOS, BIND, Unbound) and forwards structured events to a sink (stdout, JSON file, or Splunk HEC)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tshoush", email = "tshoush@aol.com" }]
keywords = ["dns", "dnstap", "infoblox", "splunk", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: System :: Logging",
]
dependencies = [
  # Keep runtime deps minimal — stdlib-only for the framing layer.
  # Add protobuf bindings here when wiring in the real dnstap.proto decoder:
  #   "protobuf>=4.25",
  # For the Splunk HEC sink we use urllib from stdlib; swap to httpx if you want async.
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]
splunk = []  # placeholder if we later want httpx/aiohttp

[project.scripts]
dnstap2 = "dnstap2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# POC collectors must stay Python 3.6-compatible (RHEL 7.9 stock python3), so
# they cannot use PEP 585 builtin generics, PEP 604 unions, or
# `from __future__ import annotations`. Exempt only those modernization rules.
# UP021/UP022 (text=, capture_output) are 3.7+; B905 (zip strict=) is 3.10+.
"scripts/poc_health_snmp.py" = ["UP006", "UP007", "UP035", "UP045", "UP021", "UP022", "B905"]

[tool.mypy]
python_version = "3.11"
strict = true
